<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".GuideActivity">

    <TextView
        android:id="@+id/guideTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessibility_guide_title"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/guideDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessibility_guide_desc"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guideTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/stepsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guideDescriptionText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_4"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_5"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/accessibilityImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="Accessibility settings screenshot"
        android:src="@drawable/accessibility_placeholder"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/stepsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/openSettingsButton" />

    <Button
        android:id="@+id/openSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Accessibility Settings"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 